# netbox

./: .gitignore  CMakeLists.txt  README.md
cmake/: GoogleBenchmark.cmake  GoogleTest.cmake
examples/: CMakeLists.txt  accept.cpp  connect.cpp  packet_source.cpp  pcap_reader.cpp  rxring.cpp
include/NetBox/: address_v4.hpp  address_v6.hpp  buffer.hpp  byte_order.hpp  consuming_buffer.hpp  debug.hpp  error_code.hpp  exception.hpp  pcap_packet_source.hpp  result.hpp  socket.hpp  socket_ops.hpp  socket_options.hpp
include/NetBox/details/: socket_options.hpp
include/NetBox/pcap/: packet.hpp  pcap.hpp  reader.hpp
include/NetBox/pdu/: ethernetii.hpp  ipv4.hpp  udp.hpp
include/NetBox/utils/: file_reader.hpp  gzip_decompress_stream.hpp  lzma_decompress_stream.hpp  string.hpp
include/netbox/: IPv4.h  IPv6.h  PcapPacketSource.h  Protocol.h  Socket.h  StaticBuffer.h  address_v4.hpp  address_v6.hpp  buffer.hpp  byte_order.hpp  compiler.hpp  concepts.h  concepts.hpp  consuming_buffer.hpp  debug.h  debug.hpp  endpoint.hpp  error_code.hpp  exception.hpp  ipv4.hpp  ipv6.hpp  pcap_packet_source.hpp  protocol.hpp  resolve.h  resolve.hpp  result.h  result.hpp  socket.hpp  socket_ops.hpp  socket_options.h  socket_options.hpp  static_buffer.hpp
include/netbox/details/: socket_options.hpp
include/netbox/details/ipv4/: Endpoint.h  address.hpp  endpoint.hpp
include/netbox/details/ipv6/: address.hpp  endpoint.hpp
include/netbox/pcap/: packet.hpp  pcap.hpp  reader.hpp
include/netbox/pdu/: UDP.h  ethernetii.hpp  ipv4.hpp  udp.hpp
include/netbox/utils/: LZMADecompressStream.h  file_reader.hpp  gzip_decompress_stream.hpp  lzma_decompress_stream.hpp  string.hpp
netbox/: ConsumingBuffer.h  ErrorCode.h  IPv4.h  IPv6.h  Socket.h  byte_order.h  compiler.h  exception.h  resolve.h  socket_ops.h
netbox/details/: byte_order.h  concepts.h  socket_options.h
netbox/details/ipv4/: Address.h
netbox/details/ipv6/: Address.h  Endpoint.h
netbox/pcap/: Packet.h  Reader.h  pcap.h
netbox/pdu/: EthernetII.h  IPv4.h  UDP.h
netbox/utils/: FileReader.h  GZipDecompressStream.h  string.h
tests/: CMakeLists.txt  test_ipv4.cpp
